--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Python で json ファイルを扱う方法を紹介します。"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pandas>=2.2.3",
     "pydantic>=2.10.5",
 ]
 
